<resources>
    <string name="app_name">Meko</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="meko">meko</string>
    <string name="app_icon">app icon</string>
    <string name="title_activity_main">Main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_meko_item">Item</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_payment_delivery">Payment &amp; Delivery</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_receipt">Order Receipt</string>
    <string name="title_activity_cook_profile">Profile</string>
    <string name="title_activity_rating">Rate Food</string>
    <string name="orders">Your Orders</string>
    <string name="settings">Settings</string>
    <string name="help_feedback">Help &amp; Feedback</string>
    <string name="title_activity_map">Map</string>
    <string name="back">back</string>
    <string name="clear">clear</string>
    <string name="location">my location</string>
    <string name="select_location">Select location</string>
    <string name="select_this_location">Select location</string>

    <string name="tag">Made with love</string>
    <string name="title_activity_verify_phone">Verify phone number</string>
    <string name="country_code">+254</string>
    <string name="phone_number">Phone number</string>
    <string name="number_helper">At least 9 digits</string>
    <string name="verify_text">We will send you a one time SMS message. Standard carrier rates may apply.</string>
    <string name="title_activity_account_setup">Account setup</string>
    <string name="searching">Searching…</string>
    <string name="map_type">Map type</string>
    <string name="no_location_selected">No location selected</string>
    <string name="full_name">Full name</string>
    <string name="user_account">user account</string>
    <string name="payment">Payment</string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="done">DONE</string>
    <string name="welcome_image">Welcome image</string>
    <string name="discover">Discover</string>
    <string name="get_started">Get started</string>
    <string name="welcome_text">Experience the beauty of delicious home cooked meals from the convenience of your preferred location</string>
    <string name="place_order">Place order</string>
    <string name="title_activity_payments">Payments</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="total">Total</string>
    <string name="new_order">New order</string>
    <string name="order_help">Proceed to choose your preferred delivery location and payment method</string>
    <string name="cart_helper">Swipe item to remove from cart</string>
    <string name="delivery_location">Delivery location</string>
    <string name="payment_method">Payment method</string>
    <string name="payment_text">Select your preferred mode of payment</string>
    <string name="add_location">Add location</string>
    <string name="title_activity_order_confirmation">Order Confirmation</string>
    <string name="proceed">Proceed</string>
    <string name="order_date">Order date</string>
    <string name="order_items">Order items</string>
    <string name="receipt_hint">Show this eReceipt to the delivery personnel to receive your order</string>
    <string name="delivery_fee_hint">*a 5&#8211;10% delivery fee may be applicable to the total order amount</string>
    <string name="sample_price">/@Ksh 350</string>
    <string name="item_description">Item description</string>
    <string name="ingredients">Ingredients</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="location_description">Location description e.g. building, floor, door no.</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>
    <string name="title_activity_locations">Locations</string>
    <string name="location_not_added">No location added</string>
    <string name="work">Work</string>
    <string name="locations_text">Make your checkout process faster by adding a frequent location.</string>
    <string name="add_a_promo_code">Add a promo code</string>
    <string name="promotions">Promotions</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="mpesa">mPesa</string>
    <string name="avatar_photo">avatar photo</string>
    <string name="cancel_order">Cancel order</string>
    <string name="action_item">Action item</string>
    <string name="verifying">Verifying</string>
    <string name="verifying_text">Waiting to automatically detect an SMS sent to</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="resend_code">Resend code</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>
    <string name="back_to_meko">Back to meko</string>
    <string name="oops">Oops</string>
    <string name="empty_text">Looks like your cart is empty</string>
    <string name="notifications">Notifications</string>
    <string name="add">add button</string>
    <string name="remove_button">remove button</string>
    <string name="amount_per_serving">Amount per serving:</string>
    <string name="title_activity_search">Search</string>
</resources>
