<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.loqoursys.meko.PaymentsActivity"
    tools:showIn="@layout/app_bar_payments">

    <android.support.v7.widget.CardView
        android:id="@+id/card_payment_methods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_2x"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_3x">

            <ImageView
                android:id="@+id/img_payment"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="@dimen/space_2x"
                android:background="@drawable/circle_bg"
                android:backgroundTint="@color/colorBlue"
                android:contentDescription="@string/title_home"
                android:padding="4dp"
                android:src="@drawable/ic_payment_black_24dp"
                android:tint="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/payment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_1x"
                android:text="@string/payment_method"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@id/img_payment"
                app:layout_constraintStart_toEndOf="@id/img_payment"
                app:layout_constraintTop_toTopOf="@id/img_payment" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2x"
                android:orientation="vertical"
                android:paddingBottom="@dimen/space_2x"
                app:layout_constraintTop_toBottomOf="@id/img_payment">

                <TextView
                    android:id="@+id/txt_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_2x"
                    android:paddingBottom="@dimen/space_2x"
                    android:paddingTop="@dimen/space_2x"
                    android:text="@string/cash_on_delivery" />


                <TextView
                    android:id="@+id/txt_mpesa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_2x"
                    android:paddingBottom="@dimen/space_2x"
                    android:paddingTop="@dimen/space_2x"
                    android:text="@string/mpesa" />

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_promo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_2x"
        android:layout_marginTop="@dimen/space_2x"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@id/card_payment_methods">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_3x">

            <ImageView
                android:id="@+id/img_promo"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="@dimen/space_2x"
                android:background="@drawable/circle_bg"
                android:backgroundTint="@color/colorRed"
                android:contentDescription="@string/title_home"
                android:padding="4dp"
                android:src="@drawable/ic_local_offer_black_24dp"
                android:tint="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/promo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_1x"
                android:text="@string/promotions"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@id/img_promo"
                app:layout_constraintStart_toEndOf="@id/img_promo"
                app:layout_constraintTop_toTopOf="@id/img_promo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2x"
                android:orientation="vertical"
                android:paddingBottom="@dimen/space_2x"
                app:layout_constraintTop_toBottomOf="@id/img_promo">

                <TextView
                    android:id="@+id/txt_location_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_2x"
                    android:paddingBottom="@dimen/space_2x"
                    android:paddingTop="@dimen/space_2x"
                    android:text="@string/add_a_promo_code" />

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
